# sqldb-logging

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
src/sqldb_logging/: __init__.py  handlers.py
tests/: __init__.py  common_functions.py  conftest.py  test_databricks.py  test_handlers.py  test_mssql.py  test_mysql.py  test_postgres.py  test_sqlite.py
