[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sqldb-logging"
version = "0.1.2"
dependencies = [
    "SQLAlchemy>=2.0.46",
]
requires-python = ">=3.11"
authors = [
    { name="Ihar Shurupau", email="ihar.shurupau@gmail.com" },
]
maintainers = [
    { name="Ihar Shurupau", email="ihar.shurupau@gmail.com" },
]
description = "An extension to the Python logging library that allows logging to SQL databases using SQLAlchemy"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["logging", "log", "logger", "sql", "sqldb", "sqlalchemy", "database", "db"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: System :: Logging",
]

[project.optional-dependencies]
databricks = ["databricks-sqlalchemy>=2.0.8"]

[project.urls]
Repository = "https://github.com/shurihar/sqldb-logging"
Issues = "https://github.com/shurihar/sqldb-logging/issues"
